Made some changes in the existing files

--- a/src/electron/tsconfig.json
+++ b/src/electron/tsconfig.json
@@ -2,8 +2,8 @@
 {
     "compilerOptions": {
         "strict": true,
-        "target": "ESNEXT",
-        "module": "NODENEXT",
+        "target": "esnext",
+        "module": "nodenext",
         "outDir": "../../dist-electron",
         "skipLibCheck": true
     }
